kubernetes/cluster/default/kube-dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
    annotations:
      kubernetes.io/ingress.class: public
      cert-manager.io/cluster-issuer: lets-encrypt
      nginx.ingress.kubernetes.io/auth-response-headers: >-
        Set-Cookie
      nginx.ingress.kubernetes.io/auth-signin: >-
        https://k8s.brhd.io/outpost.goauthentik.io/start?rd=$escaped_request_uri
      nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;
      nginx.ingress.kubernetes.io/auth-url: >-
        http://authentik-outpost-embedded.default.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      # service.alpha.kubernetes.io/app-protocols: '{"https":"HTTPS"}'
spec:
  rules:
    - host: k8s.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
